# dao-entrance-node

./: .gitignore  Cargo.toml  README.md  pos_build.Dockerfile  pos_from_bin.Dockerfile
apps/node-pos/node/: Cargo.toml
apps/node-pos/node/src/: benchmarking.rs  chain_spec.rs  rpc.rs  service.rs
apps/node-pos/runtime/: Cargo.toml
apps/node-pos/runtime/src/: lib.rs  tests.rs
apps/pallets/: README.md
apps/pallets/dao/: types.rs
apps/pallets/daoent-assets/: Cargo.toml  README.md
apps/pallets/daoent-assets/src/: asset_adaper_in_pallet.rs  asset_in_pallet.rs  impl_currency_handler.rs  impl_multi_currency.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
apps/pallets/daoent-dao/: Cargo.toml  README.md
apps/pallets/daoent-dao/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
apps/pallets/daoent-gov/: Cargo.toml  README.md
apps/pallets/daoent-gov/src/: lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
apps/pallets/daoent-guild/: Cargo.toml  README.md
apps/pallets/daoent-guild/src/: lib.rs  mock.rs  tests.rs
apps/pallets/daoent-project/: Cargo.toml
apps/pallets/daoent-project/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
apps/pallets/daoent-sudo/: Cargo.toml
apps/pallets/daoent-sudo/src/: lib.rs  mock.rs  tests.rs
apps/pallets/wetee-app/: Cargo.toml
apps/pallets/wetee-app/src/: lib.rs  mock.rs  tests.rs
apps/pos/runtime/: Cargo.toml
apps/primitives/: Cargo.toml
apps/primitives/src/: lib.rs  traits.rs  types.rs
docs/: run-docker.md  run-node.md  testing-guide.md
hacks/: pos_docker_from_local.sh
tools/chain-spec-builder/: Cargo.toml
tools/hash/: Cargo.toml
