[workspace]

exclude = [
 	"native-nostd-hasher",
]

members = [
	# DPOS
	# "apps/full/executor",
	# "apps/full/rpc",
	# "apps/full/node",
	# "apps/full/runtime",

	# POS
	"apps/node-pos/node",
	"apps/node-pos/runtime",

	# pellets
	"apps/pallets/daoent-dao",
	"apps/pallets/daoent-sudo",
	"apps/pallets/daoent-gov",
	"apps/pallets/daoent-assets",
	"apps/pallets/daoent-guild",
	"apps/pallets/daoent-project",
	"apps/pallets/wetee-app",

	# 工具
	# "tools/hash",
	# "tools/subkey",
	# "tools/chain-spec-builder",

	"apps/primitives"

]

resolver = "2"
